<resources>
    <string name="app_name">TicTacToe</string>
    <string name="title_app">Tic Tac Toe</string>
    <string name="play_txt">Play</string>
    <string name="setting_txt">Settings</string>
    <string name="history_txt">History</string>
    <string name="exit">Exit</string>
    <string name="theme">Theme: </string>
    <string name="light">Light Mode</string>
    <string name="dark">Dark Mode</string>
    <string name="animation">Animation: </string>
    <string name="enable">Enable</string>
    <string name="sound">Sound: </string>
    <string name="select_game_mode">Select Game Mode :</string>
    <string name="threelayer">3x3</string>
    <string name="fourlayer">4x4</string>
    <string name="fivelayer">5x5</string>
    <string name="player1_name">Name of Player 1 :</string>
    <string name="player1">Player 1</string>
    <string name="player2_name">Name of Player 2 :</string>
    <string name="player2">Player 2</string>
    <string name="instruction">Enter player name, select mode game and click play</string>
    <string name="play">Play</string>
    <string name="player1_empty">Name of Player 1 can\'t be empty</string>
    <string name="player2_empty">Name of Player 2 can\'t be empty</string>
    <string name="symbol_x">X</string>
    <string name="symbol_o">O</string>
    <string name="winning_rate">Winning\nRate :</string>
    <string name="current_play">Current Player Symbol :</string>
    <string name="exit_from_play">Exit from play</string>
    <string name="continue_play">Continue</string>
    <string name="reset_btn">Reset</string>
    <string name="won">Won !</string>
    <string name="draw">Draw !</string>
    <string name="congratulation">Congratulation !!</string>
    <string name="failed_save_data">Failed to save data.</string>
    <string name="success_save_data">Successful save the data.</string>
    <string name="loading">Loading...</string>
    <string name="share_result">Share Result Game</string>
    <string name="no_result_data">No History Game</string>
    <string name="id_player">ID Player</string>
    <string name="player_name">Player Name</string>
    <string name="scoring_player">Player Score</string>
    <string name="win_rate_player">Player WinRate</string>
</resources>