<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Settings">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/theme_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/theme"
        android:textSize="20sp"
        android:layout_margin="@dimen/top_bar_distance"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="parent"/>
    <RadioGroup
        android:id="@+id/btnTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="@dimen/ten_dp"
        app:layout_constraintStart_toEndOf="@id/theme_txt"
        app:layout_constraintTop_toTopOf="@id/theme_txt"
        app:layout_constraintBottom_toBottomOf="@id/theme_txt">
        <RadioButton
            android:id="@+id/btnLight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/light"/>
        <RadioButton
            android:id="@+id/btnDark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dark"/>
    </RadioGroup>
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/animation_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/animation"
        android:textSize="20sp"
        android:layout_margin="@dimen/top_bar_distance"
        app:layout_constraintTop_toBottomOf="@id/btnTheme"
        app:layout_constraintStart_toStartOf="parent"/>
    <com.google.android.material.switchmaterial.SwitchMaterial
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/animationAction"
        android:text="@string/enable"
        android:switchPadding="@dimen/ten_dp"
        android:layout_marginStart="@dimen/ten_dp"
        app:layout_constraintTop_toTopOf="@id/animation_txt"
        app:layout_constraintBottom_toBottomOf="@id/animation_txt"
        app:layout_constraintStart_toEndOf="@id/animation_txt"/>
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/sound_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sound"
        android:textSize="20sp"
        android:layout_margin="@dimen/top_bar_distance"
        app:layout_constraintTop_toBottomOf="@id/animation_txt"
        app:layout_constraintStart_toStartOf="parent"/>
    <com.google.android.material.switchmaterial.SwitchMaterial
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/soundAction"
        android:text="@string/enable"
        android:switchPadding="@dimen/ten_dp"
        android:layout_marginStart="@dimen/ten_dp"
        app:layout_constraintTop_toTopOf="@id/sound_txt"
        app:layout_constraintBottom_toBottomOf="@id/sound_txt"
        app:layout_constraintStart_toEndOf="@id/sound_txt"/>
</androidx.constraintlayout.widget.ConstraintLayout>